# autodocs-mcp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/autodocs_mcp/: __init__.py  __main__.py  cli.py
src/autodocs_mcp/embedding/: __init__.py  generator.py  store.py
src/autodocs_mcp/mcp/: __init__.py  template.py
src/autodocs_mcp/scraper/: __init__.py  curl_wrapper.py  detector.py  fallback.py  mkdocs.py  parser.py  readthedocs.py  sphinx.py
src/autodocs_mcp/vscode/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_cli.py  test_embedding.py  test_mcp.py  test_scraper.py  test_vscode.py
